<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginVertical="3dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:text="@string/tambah_transaksi"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/inputId_transaksi"
                android:text="@string/id_transaksi"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/inputId_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:hint="TR-001"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_transaksi"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputViewTanggal_transaksi"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:editable="false"
                    android:hint="01-01-2023" />

                <Button
                    android:id="@+id/btnInputTanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/pilih_tanggal"
                    android:textAlignment="textStart"
                    android:textAllCaps="false" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/inputKet_transaksi"
                android:text="@string/keterangan"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/inputKet_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:inputType="text"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/inputDebit_transaksi"
                android:text="@string/debit"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/inputDebit_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:hint="0"
                android:inputType="number"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/inputKredit_transaksi"
                android:text="@string/kredit"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/inputKredit_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:hint="0"
                android:inputType="number"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnTambah"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:text="@string/tambah" />

                <Button
                    android:id="@+id/btnLaporan"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="Laporan" />

            </LinearLayout>

        </LinearLayout>
        
    </ScrollView>

</LinearLayout>